feat: add viewModel to CreaturesAddedFragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Livro_Android_Kotlin_PauloSalvatore">
-        <activity android:name=".view.creatures.added.CreaturesAddedActivity"></activity>
+        <activity android:name=".view.creatures.added.CreaturesAddedActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".view.creatures.choose.CreaturesChooseActivity" />
         <activity android:name=".view.creatures.evolving.CreaturesEvolvingActivity" />
         <activity android:name=".view.creatures.view.CreaturesViewActivity" />
