feat: implement `CreaturesViewFragment`

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,12 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".view.creatures.view.CreaturesViewActivity" />
+        <activity android:name=".view.creatures.view.CreaturesViewActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity android:name=".view.creatures.evolving.CreaturesEvolvingActivity" />
     </application>
