--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 buildscript {
     ext {
         kotlinVersion = "1.5.31"
-        navigationVersion = "2.1.0"
+        navigationVersion = "2.4.0-alpha10"
     }
 
     repositories {
