feat(remote-data-source): implement retrofit and api requests

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,5 @@ dependencies {
     // Retrofit
     implementation("com.squareup.retrofit2:converter-gson:$retrofitVersion")
     implementation("com.squareup.retrofit2:retrofit:$retrofitVersion")
+    implementation("com.squareup.retrofit2:adapter-rxjava3:$retrofitVersion")
 }
