--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="tech.salvatore.livro_android_kotlin_paulo_salvatore">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:fullBackupContent="true"
@@ -9,7 +11,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Livro_Android_Kotlin_PauloSalvatore">
+        android:theme="@style/Theme.Livro_Android_Kotlin_PauloSalvatore"
+        android:usesCleartextTraffic="true">
 
         <!-- Activities -->
 
