--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext {
         kotlinVersion = "1.5.31"
         navigationVersion = "2.4.0-alpha10"
+        hiltVersion = "2.28-alpha"
         roomVersion = "2.3.0"
         retrofitVersion = "2.9.0"
         dataStoreVersion = "1.0.0"
@@ -20,6 +21,9 @@ buildscript {
 
         // Navigation
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
+
+        // Hilt
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
     }
 }
 
