feat(gradle): update gradle version

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
+        gradleVersion = "7.0.3"
         kotlinVersion = "1.5.31"
         navigationVersion = "2.4.0-alpha10"
         hiltVersion = "2.28-alpha"
@@ -16,7 +17,7 @@ buildscript {
 
     dependencies {
         // Android/Kotlin
-        classpath "com.android.tools.build:gradle:7.0.2"
+        classpath "com.android.tools.build:gradle:$gradleVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
         // Navigation
