feat(hilt): implement dependency injection

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,5 +89,6 @@ dependencies {
 
     // Hilt
     implementation("com.google.dagger:hilt-android:$hiltVersion")
+    implementation("androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03")
     kapt("com.google.dagger:hilt-android-compiler:$hiltVersion")
 }
