--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         gradleVersion = "7.0.3"
         kotlinVersion = "1.5.31"
         navigationVersion = "2.4.0-alpha10"
-        hiltVersion = "2.28-alpha"
+        hiltVersion = "2.39.1"
         roomVersion = "2.3.0"
         retrofitVersion = "2.9.0"
         dataStoreVersion = "1.0.0"
