--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Livro_Android_Kotlin_PauloSalvatore"
-        android:usesCleartextTraffic="true">
+        android:theme="@style/Theme.Livro_Android_Kotlin_PauloSalvatore">
 
         <!-- Activities -->
 
