chore(hilt): add hilt vm version to project's gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,7 +89,7 @@ dependencies {
 
     // Hilt
     implementation("com.google.dagger:hilt-android:$hiltVersion")
-    implementation("androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03")
+    implementation("androidx.hilt:hilt-lifecycle-viewmodel:$hiltVMVersion")
     kapt("com.google.dagger:hilt-android-compiler:$hiltVersion")
 
     // Glide
