--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        gradleVersion = "7.0.3"
+        gradleVersion = '7.0.4'
         kotlinVersion = "1.5.31"
         navigationVersion = "2.4.0-alpha10"
         hiltVersion = "2.39.1"
