chore(modules): create modules `step01-initial` & `my-project`

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,4 @@
 rootProject.name = "Livro_Android_Kotlin_PauloSalvatore"
 include ':project-complete'
+include ':step01-initial'
+include ':my-project'
