--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        gradleVersion = '7.0.4'
+        gradleVersion = "7.0.4"
         kotlinVersion = "1.5.31"
+        lifecycleVersion = "2.4.1"
         navigationVersion = "2.4.0-alpha10"
         hiltVersion = "2.39.1"
         hiltVMVersion = "1.0.0-alpha03"
