--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,27 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        gradleVersion = "7.0.4"
+        // Core
+        coreKtxVersion = "1.7.0"
+        appCompatVersion = "1.4.1"
+
+        // Layout
+        materialVersion = "1.5.0"
+        constraintLayoutVersion = "2.1.3"
+        legacySupportVersion = "1.0.0"
+
+        // Test
+        junitVersion = "4.13.2"
+        androidJunitVersion = "1.1.3"
+        espressoVersion = "3.4.0"
+
+        // Multi Dex
+        multiDexVersion = "2.0.1"
+
+        gradleVersion = "7.1.2"
         kotlinVersion = "1.5.31"
         lifecycleVersion = "2.4.1"
-        navigationVersion = "2.4.0-alpha10"
+        navigationVersion = "2.4.1"
         hiltVersion = "2.39.1"
         hiltVMVersion = "1.0.0-alpha03"
         roomVersion = "2.3.0"
