--- a/build.gradle
+++ b/build.gradle
@@ -18,16 +18,31 @@ buildscript {
         // Multi Dex
         multiDexVersion = "2.0.1"
 
-        gradleVersion = "7.1.2"
-        kotlinVersion = "1.5.31"
+        // Lifecycle
         lifecycleVersion = "2.4.1"
-        navigationVersion = "2.4.1"
+
+        // Hilt
         hiltVersion = "2.39.1"
         hiltVMVersion = "1.0.0-alpha03"
-        roomVersion = "2.3.0"
+
+        // Navigation
+        navigationVersion = "2.4.1"
+
+        // Room
+        roomVersion = "2.4.2"
+
+        // Retrofit
         retrofitVersion = "2.9.0"
+
+        // DataStore
         dataStoreVersion = "1.0.0"
-        glideVersion = "4.12.0"
+
+        // Glide
+        glideVersion = "4.13.0"
+
+        // Project: Gradle & Kotlin
+        gradleVersion = "7.1.2"
+        kotlinVersion = "1.5.31"
     }
 
     repositories {
