step02: initial files

--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ buildscript {
     dependencies {
         // Android/Kotlin
         classpath "com.android.tools.build:gradle:$gradleVersion"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
 
         // Navigation
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
