--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = "Livro_Android_Kotlin_PauloSalvatore"
 include ':project-complete'
 include ':step01-initial'
 include ':my-project'
+include ':step02-navigation'
