--- a/step02-navigation/src/main/AndroidManifest.xml
+++ b/step02-navigation/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.oceanbrasil.step02_navigation">
+    package="tech.salvatore.livro_android_kotlin_paulo_salvatore">
 
     <application
         android:allowBackup="true"
@@ -8,6 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Livro_Android_Kotlin_PauloSalvatore" />
+        android:theme="@style/Theme.Livro_Android_Kotlin_PauloSalvatore">
+        <activity
+            android:name=".NavigationActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
 
 </manifest>
