step4: initial files

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include ':project-complete'
 include ':step01-initial'
 include ':step02-navigation'
 include ':step03-creatures-list'
+include ':step04-data-binding'
