--- a/step04-data-binding/src/main/AndroidManifest.xml
+++ b/step04-data-binding/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="tech.salvatore.livro_android_kotlin_paulo_salvatore">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".App"
         android:allowBackup="true"
