--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,4 @@ include ':step01-initial'
 include ':step02-navigation'
 include ':step03-creatures-list'
 include ':step04-data-binding'
+include ':step05-add-creatures'
