--- a/project-complete/build.gradle
+++ b/project-complete/build.gradle
@@ -2,13 +2,13 @@ plugins {
     // Kotlin/Android
     id "com.android.application"
     id "kotlin-android"
+
+    // Kapt & Hilt
     id "kotlin-kapt"
+    id "dagger.hilt.android.plugin"
 
     // Navigation
     id "androidx.navigation.safeargs.kotlin"
-
-    // Hilt
-    id "dagger.hilt.android.plugin"
 }
 
 android {
