--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ buildscript {
         glideVersion = "4.13.0"
 
         // Project: Gradle & Kotlin
-        gradleVersion = "7.1.2"
+        gradleVersion = '7.1.3'
         kotlinVersion = "1.5.31"
     }
 
