--- a/settings.gradle
+++ b/settings.gradle
@@ -6,3 +6,4 @@ include ':step02-navigation'
 include ':step03-creatures-list'
 include ':step04-data-binding'
 include ':step05-add-creatures'
+include ':step06-creatures-silhouette'
