chore(step7): create module

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,4 @@ include ':step03-creatures-list'
 include ':step04-data-binding'
 include ':step05-add-creatures'
 include ':step06-creatures-silhouette'
+include ':step07-creatures-view'
