--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ buildscript {
         lifecycleVersion = "2.4.1"
 
         // Hilt
-        hiltVersion = "2.39.1"
+        hiltVersion = "2.40.1"
         hiltVMVersion = "1.0.0-alpha03"
 
         // Navigation
@@ -41,7 +41,7 @@ buildscript {
         glideVersion = "4.13.0"
 
         // Project: Gradle & Kotlin
-        gradleVersion = '7.1.3'
+        gradleVersion = "7.2.2"
         kotlinVersion = "1.5.31"
     }
 
