--- a/cap11-api-backend/build.gradle
+++ b/cap11-api-backend/build.gradle
@@ -76,7 +76,8 @@ dependencies {
     implementation("com.github.bumptech.glide:glide:$glideVersion")
     kapt("com.github.bumptech.glide:compiler:$glideVersion")
 
-    // RX
-    // TODO: Pensar se vale a pena colocar a versão do RX no gradle do projeto
-    implementation("io.reactivex.rxjava2:rxjava:2.2.2")
+    // Retrofit
+    implementation("com.squareup.retrofit2:converter-gson:$retrofitVersion")
+    implementation("com.squareup.retrofit2:retrofit:$retrofitVersion")
+    implementation("com.squareup.retrofit2:adapter-rxjava3:$retrofitVersion")
 }
