--- a/cap10-rx/build.gradle
+++ b/cap10-rx/build.gradle
@@ -77,6 +77,5 @@ dependencies {
     kapt("com.github.bumptech.glide:compiler:$glideVersion")
 
     // RX
-    // TODO: Pensar se vale a pena colocar a versão do RX no gradle do projeto
-    implementation("io.reactivex.rxjava2:rxjava:2.2.2")
+    implementation("io.reactivex.rxjava2:rxjava:$rxVersion")
 }
