refactor(cap09): rename project from `step07`

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,6 @@ include ':step03-creatures-list'
 include ':step04-data-binding'
 include ':step05-add-creatures'
 include ':step06-creatures-silhouette'
-include ':step07-creatures-view'
+include ':cap09-creatures-view'
 include ':cap10-rx'
 include ':cap11-api-backend'
