--- a/settings.gradle
+++ b/settings.gradle
@@ -5,7 +5,7 @@ include ':step01-initial'
 include ':step02-navigation'
 include ':step03-creatures-list'
 include ':step04-data-binding'
-include ':step05-add-creatures'
+include ':cap07-add-creatures'
 include ':cap08-creatures-silhouette'
 include ':cap09-creatures-view'
 include ':cap10-rx'
