refactor(cap06): rename project from `step04`

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,7 +4,7 @@ include ':project-complete'
 include ':step01-initial'
 include ':step02-navigation'
 include ':step03-creatures-list'
-include ':step04-data-binding'
+include ':cap06-data-binding'
 include ':cap07-add-creatures'
 include ':cap08-creatures-silhouette'
 include ':cap09-creatures-view'
