refactor(cap05): rename project from `step03`

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,7 @@ include ':my-project'
 include ':project-complete'
 include ':step01-initial'
 include ':step02-navigation'
-include ':step03-creatures-list'
+include ':cap05-creatures-list'
 include ':cap06-data-binding'
 include ':cap07-add-creatures'
 include ':cap08-creatures-silhouette'
