--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name = "Livro_Android_Kotlin_PauloSalvatore"
 include ':my-project'
 include ':project-complete'
-include ':step01-initial'
+include ':cap03-initial'
 include ':cap04-navigation'
 include ':cap05-creatures-list'
 include ':cap06-data-binding'
