--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,4 @@ include ':cap08-creatures-silhouette'
 include ':cap09-creatures-view'
 include ':cap10-rx'
 include ':cap11-api-backend'
+include ':cap11-api-backend-impl'
