--- a/cap11-api-backend/build.gradle
+++ b/cap11-api-backend/build.gradle
@@ -20,6 +20,7 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
